# pycounts_dsci_practice_jm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package_test.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_dsci_practice_jm/: __init__.py
tests/: test_pycounts_dsci_practice_jm.py
