[tool.poetry]
name = "pycounts_dsci_practice_jm"
version = "0.1.0"
description = "calculate word counts in file"
authors = ["jay mangat"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
matplotlib = ">=3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
